--- a/thesis-text/Makefile
+++ b/thesis-text/Makefile
@@ -5,7 +5,8 @@
 # Edited by: dytrych AT fit vutbr cz
 #===========================================
 # asi budete chtit prejmenovat / you will probably rename:
-CO=projekt
+CO=thesis_hofbauer
+NAME=thesis_hofbauer
 
 all: $(CO).pdf
 
