Moved config files from server to client side

--- a/agents/memory-logger/CMakeLists.txt
+++ b/agents/memory-logger/CMakeLists.txt
@@ -3,5 +3,5 @@ cmake_minimum_required(VERSION 3.20)
 if(NOT TARGET CommunicationXLib)
     add_subdirectory(../../communication)
 endif()
-add_executable(agent-memory-logger agent-memory-logger.cpp)
-target_link_libraries(agent-memory-logger CommunicationXLib)
+add_executable(memory-logger agent-memory-logger.cpp)
+target_link_libraries(memory-logger CommunicationXLib)
