--- a/agents/memory-logger/CMakeLists.txt
+++ b/agents/memory-logger/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.20)
 #project(agent-memory-logger)
-if(NOT TARGET CommunicationXLib)
+if(NOT TARGET CommunicationLib)
     add_subdirectory(../../communication)
 endif()
-add_executable(memory-logger agent-memory-logger.cpp)
-target_link_libraries(memory-logger CommunicationXLib)
+add_executable(memory-logger memory-logger.cpp)
+target_link_libraries(memory-logger CommunicationLib)
