--- a/agents/ram-logger/CMakeLists.txt
+++ b/agents/ram-logger/CMakeLists.txt
@@ -3,5 +3,6 @@ cmake_minimum_required(VERSION 3.20)
 if(NOT TARGET CommunicationLib)
     add_subdirectory(../../communication)
 endif()
-add_executable(memory-logger memory-logger.cpp)
-target_link_libraries(memory-logger CommunicationLib)
+add_executable(ram-logger ram-logger.cpp)
+configure_file(config.json5 config.json5 COPYONLY)
+target_link_libraries(ram-logger CommunicationLib)
