Uptime logger uses config file

--- a/agents/uptime-logger/CMakeLists.txt
+++ b/agents/uptime-logger/CMakeLists.txt
@@ -3,4 +3,5 @@ if(NOT TARGET CommunicationLib)
     add_subdirectory(../../communication)
 endif()
 add_executable(uptime-logger uptime-logger.cpp)
+configure_file(config.json5 config.json5 COPYONLY)
 target_link_libraries(uptime-logger CommunicationLib)
