--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,8 +16,9 @@ target_link_libraries(sys-logger CommunicationLib)
 add_subdirectory(agents/ram-logger)
 add_subdirectory(agents/uptime-logger)
 add_subdirectory(agents/space-logger)
+add_subdirectory(agents/test-random-logger)
 
-add_dependencies(sys-logger ram-logger uptime-logger space-logger)
+add_dependencies(sys-logger ram-logger uptime-logger space-logger test-random-logger)
 # ----------- nlohmann json library
 # TODO downloads too long?
 FetchContent_Declare(json
