--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,8 +17,9 @@ add_subdirectory(agents/ram-logger)
 add_subdirectory(agents/uptime-logger)
 add_subdirectory(agents/space-logger)
 add_subdirectory(agents/test-random-logger)
+add_subdirectory(agents/temperature-logger)
 
-add_dependencies(sys-logger ram-logger uptime-logger space-logger test-random-logger)
+add_dependencies(sys-logger ram-logger uptime-logger space-logger test-random-logger temperature-logger)
 # ----------- nlohmann json library
 # TODO downloads too long?
 FetchContent_Declare(json
