Net logger agent added.

--- a/agents-list.conf
+++ b/agents-list.conf
@@ -1,5 +1,6 @@
 #agents/space-logger
-agents/uptime-logger
+#agents/uptime-logger
 #agents/ram-logger
-agents/temperature-logger
-agents/test-random-logger
+#agents/temperature-logger
+#agents/test-random-logger
+agents/net-connectivity-logger
