--- a/agents/ram-logger/CMakeLists.txt
+++ b/agents/ram-logger/CMakeLists.txt
@@ -4,5 +4,5 @@ if(NOT TARGET CommunicationLib)
     add_subdirectory(../../communication)
 endif()
 add_executable(ram-logger ram-logger.cpp)
-configure_file(config.json5 config.json5 COPYONLY)
+configure_file(config.json config.json COPYONLY)
 target_link_libraries(ram-logger CommunicationLib)
