--- a/agents/space-logger/CMakeLists.txt
+++ b/agents/space-logger/CMakeLists.txt
@@ -4,5 +4,5 @@ if(NOT TARGET CommunicationLib)
     add_subdirectory(../../communication)
 endif()
 add_executable(space-logger space-logger.cpp)
-configure_file(config.json5 config.json5 COPYONLY)
+configure_file(config.json config.json COPYONLY)
 target_link_libraries(space-logger CommunicationLib)
