--- a/agents/temperature-logger/CMakeLists.txt
+++ b/agents/temperature-logger/CMakeLists.txt
@@ -4,5 +4,5 @@ if(NOT TARGET CommunicationLib)
     add_subdirectory(../../communication)
 endif()
 add_executable(temperature-logger temperature-logger.cpp)
-configure_file(config.json5 config.json5 COPYONLY)
+configure_file(config.json config.json COPYONLY)
 target_link_libraries(temperature-logger CommunicationLib)
