--- a/agents/test-random-logger/CMakeLists.txt
+++ b/agents/test-random-logger/CMakeLists.txt
@@ -3,5 +3,5 @@ if(NOT TARGET CommunicationLib)
     add_subdirectory(../../communication)
 endif()
 add_executable(test-random-logger test-random-logger.cpp)
-configure_file(config.json5 config.json5 COPYONLY)
+configure_file(config.json config.json COPYONLY)
 target_link_libraries(test-random-logger CommunicationLib)
