--- a/agents-list.conf
+++ b/agents-list.conf
@@ -1,9 +1,9 @@
-#agents/space-logger
-#agents/uptime-logger
-#agents/ram-logger
-#agents/temperature-logger
-agents/test-random-logger
+agents/space-logger
+agents/uptime-logger
+agents/ram-logger
+agents/temperature-logger
+#agents/test-random-logger
 
 
-
-#agents/net-connectivity-logger
+agents/net-connectivity-logger
+#agents/smart-logger # not implemented!
