--- a/agents/ram-agent/CMakeLists.txt
+++ b/agents/ram-agent/CMakeLists.txt
@@ -3,6 +3,6 @@ cmake_minimum_required(VERSION 3.20)
 if(NOT TARGET CommunicationLib)
     add_subdirectory(../../communication)
 endif()
-add_executable(ram-logger ram-logger.cpp)
+add_executable(ram-logger ram-agent.cpp)
 configure_file(config.json config.json COPYONLY)
 target_link_libraries(ram-logger CommunicationLib)
