--- a/agents/smart-agent/CMakeLists.txt
+++ b/agents/smart-agent/CMakeLists.txt
@@ -1,8 +1,7 @@
 cmake_minimum_required(VERSION 3.20)
-#project(agent-memory-logger)
 if(NOT TARGET CommunicationLib)
     add_subdirectory(../../communication)
 endif()
-add_executable(space-logger space-logger.cpp)
+add_executable(smart-logger smart-agent.cpp)
 configure_file(config.json config.json COPYONLY)
-target_link_libraries(space-logger CommunicationLib)
+target_link_libraries(smart-logger CommunicationLib)
