--- a/agents/space-agent/CMakeLists.txt
+++ b/agents/space-agent/CMakeLists.txt
@@ -1,7 +1,8 @@
 cmake_minimum_required(VERSION 3.20)
+#project(agent-memory-logger)
 if(NOT TARGET CommunicationLib)
     add_subdirectory(../../communication)
 endif()
-add_executable(test-random-logger test-random-logger.cpp)
+add_executable(space-logger space-agent.cpp)
 configure_file(config.json config.json COPYONLY)
-target_link_libraries(test-random-logger CommunicationLib)
+target_link_libraries(space-logger CommunicationLib)
