--- a/agents/temperature-agent/CMakeLists.txt
+++ b/agents/temperature-agent/CMakeLists.txt
@@ -1,7 +1,8 @@
 cmake_minimum_required(VERSION 3.20)
+#project(agent-memory-logger)
 if(NOT TARGET CommunicationLib)
     add_subdirectory(../../communication)
 endif()
-add_executable(uptime-logger uptime-logger.cpp)
+add_executable(temperature-logger temperature-agent.cpp)
 configure_file(config.json config.json COPYONLY)
-target_link_libraries(uptime-logger CommunicationLib)
+target_link_libraries(temperature-logger CommunicationLib)
