--- a/agents/test-random-agent/CMakeLists.txt
+++ b/agents/test-random-agent/CMakeLists.txt
@@ -1,8 +1,7 @@
 cmake_minimum_required(VERSION 3.20)
-#project(agent-memory-logger)
 if(NOT TARGET CommunicationLib)
     add_subdirectory(../../communication)
 endif()
-add_executable(net-connectivity-logger net-connectivity-logger.cpp)
+add_executable(test-random-logger test-random-agent.cpp)
 configure_file(config.json config.json COPYONLY)
-target_link_libraries(net-connectivity-logger CommunicationLib)
+target_link_libraries(test-random-logger CommunicationLib)
