--- a/agents-list.conf
+++ b/agents-list.conf
@@ -1,9 +1,8 @@
-agents/space-logger
-agents/uptime-logger
-agents/ram-logger
-agents/temperature-logger
-#agents/test-random-logger
+agents/space-agent
+agents/uptime-agent
+agents/ram-agent
+agents/temperature-agent
+#agents/test-random-agent
+agents/net-connectivity-agent
 
-
-agents/net-connectivity-logger
 #agents/smart-logger # not implemented!
