--- a/agents/smart-agent/CMakeLists.txt
+++ b/agents/smart-agent/CMakeLists.txt
@@ -2,6 +2,6 @@ cmake_minimum_required(VERSION 3.20)
 if(NOT TARGET CommunicationLib)
     add_subdirectory(../../communication)
 endif()
-add_executable(smart-logger smart-agent.cpp)
+add_executable(smart-agent smart-agent.cpp)
 configure_file(config.json config.json COPYONLY)
-target_link_libraries(smart-logger CommunicationLib)
+target_link_libraries(smart-agent CommunicationLib)
