--- a/agents/space-agent/CMakeLists.txt
+++ b/agents/space-agent/CMakeLists.txt
@@ -3,6 +3,6 @@ cmake_minimum_required(VERSION 3.20)
 if(NOT TARGET CommunicationLib)
     add_subdirectory(../../communication)
 endif()
-add_executable(space-logger space-agent.cpp)
+add_executable(space-agent space-agent.cpp)
 configure_file(config.json config.json COPYONLY)
-target_link_libraries(space-logger CommunicationLib)
+target_link_libraries(space-agent CommunicationLib)
