--- a/agents/uptime-agent/CMakeLists.txt
+++ b/agents/uptime-agent/CMakeLists.txt
@@ -2,6 +2,6 @@ cmake_minimum_required(VERSION 3.20)
 if(NOT TARGET CommunicationLib)
     add_subdirectory(../../communication)
 endif()
-add_executable(uptime-logger uptime-agent.cpp)
+add_executable(uptime-agent uptime-agent.cpp)
 configure_file(config.json config.json COPYONLY)
-target_link_libraries(uptime-logger CommunicationLib)
+target_link_libraries(uptime-agent CommunicationLib)
