--- a/agents/net-connectivity-agent/CMakeLists.txt
+++ b/agents/net-connectivity-agent/CMakeLists.txt
@@ -3,6 +3,6 @@ cmake_minimum_required(VERSION 3.20)
 if(NOT TARGET CommunicationLib)
     add_subdirectory(../../communication)
 endif()
-add_executable(net-connectivity-logger net-connectivity-agent.cpp)
+add_executable(net-connectivity-agent net-connectivity-agent.cpp)
 configure_file(config.json config.json COPYONLY)
-target_link_libraries(net-connectivity-logger CommunicationLib)
+target_link_libraries(net-connectivity-agent CommunicationLib)
