--- a/agents/temperature-agent/CMakeLists.txt
+++ b/agents/temperature-agent/CMakeLists.txt
@@ -3,6 +3,6 @@ cmake_minimum_required(VERSION 3.20)
 if(NOT TARGET CommunicationLib)
     add_subdirectory(../../communication)
 endif()
-add_executable(temperature-logger temperature-agent.cpp)
+add_executable(temperature-agent temperature-agent.cpp)
 configure_file(config.json config.json COPYONLY)
-target_link_libraries(temperature-logger CommunicationLib)
+target_link_libraries(temperature-agent CommunicationLib)
