--- a/agents/test-random-agent/CMakeLists.txt
+++ b/agents/test-random-agent/CMakeLists.txt
@@ -2,6 +2,6 @@ cmake_minimum_required(VERSION 3.20)
 if(NOT TARGET CommunicationLib)
     add_subdirectory(../../communication)
 endif()
-add_executable(test-random-logger test-random-agent.cpp)
+add_executable(test-random-agent test-random-agent.cpp)
 configure_file(config.json config.json COPYONLY)
-target_link_libraries(test-random-logger CommunicationLib)
+target_link_libraries(test-random-agent CommunicationLib)
