AgentInfo->AgentProcess rename + refactor camelCase

--- a/agents-list.conf
+++ b/agents-list.conf
@@ -1,8 +1,8 @@
-agents/space-agent
+#agents/space-agent
 agents/uptime-agent
 agents/ram-agent
 agents/temperature-agent
 #agents/test-random-agent
 agents/net-connectivity-agent
 
-#agents/smart-logger # not implemented!
+#agents/smart-agent # not implemented!
