created namespaces communication, core and agentclient

--- a/agents-list.conf
+++ b/agents-list.conf
@@ -1,7 +1,7 @@
 #agents/space-agent
-agents/uptime-agent
-agents/ram-agent
-agents/temperature-agent
+#agents/uptime-agent
+#agents/ram-agent
+#agents/temperature-agent
 #agents/test-random-agent
 agents/net-connectivity-agent
 
