--- a/agents/temperature-agent/CMakeLists.txt
+++ b/agents/temperature-agent/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.20)
 #project(agent-memory-logger)
-if(NOT TARGET CommunicationLib)
-    add_subdirectory(../../communication)
+if(NOT TARGET agent_client_lib)
+    add_subdirectory(../../agent-client)
 endif()
 add_executable(temperature-agent temperature-agent.cpp)
 configure_file(config.json config.json COPYONLY)
-target_link_libraries(temperature-agent CommunicationLib)
+target_link_libraries(temperature-agent agent_client_lib)
