--- a/agents/uptime-agent/CMakeLists.txt
+++ b/agents/uptime-agent/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.20)
-if(NOT TARGET CommunicationLib)
-    add_subdirectory(../../communication)
+if(NOT TARGET agent_client_lib)
+    add_subdirectory(../../agent-client)
 endif()
 add_executable(uptime-agent uptime-agent.cpp)
 configure_file(config.json config.json COPYONLY)
-target_link_libraries(uptime-agent CommunicationLib)
+target_link_libraries(uptime-agent agent_client_lib)
