--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,15 +13,15 @@ ADD_EXECUTABLE(sys-logger main.cpp ${source_files})
 TARGET_INCLUDE_DIRECTORIES(sys-logger PUBLIC "core/include/")
 TARGET_LINK_LIBRARIES(sys-logger CommunicationLib)
 
-ADD_SUBDIRECTORY(agents/ram-agent)
-ADD_SUBDIRECTORY(agents/uptime-agent)
-ADD_SUBDIRECTORY(agents/space-agent)
-ADD_SUBDIRECTORY(agents/test-random-agent)
-ADD_SUBDIRECTORY(agents/temperature-agent)
 ADD_SUBDIRECTORY(agents/net-connectivity-agent)
-ADD_SUBDIRECTORY(agents/smart-agent)
+#ADD_SUBDIRECTORY(agents/ram-agent)
+#ADD_SUBDIRECTORY(agents/uptime-agent)
+#ADD_SUBDIRECTORY(agents/space-agent)
+#ADD_SUBDIRECTORY(agents/test-random-agent)
+#ADD_SUBDIRECTORY(agents/temperature-agent)
+#ADD_SUBDIRECTORY(agents/smart-agent)
 
-ADD_DEPENDENCIES(sys-logger ram-agent uptime-agent space-agent test-random-agent temperature-agent net-connectivity-agent smart-agent)
+ADD_DEPENDENCIES(sys-logger net-connectivity-agent) #ram-agent uptime-agent space-agent test-random-agent temperature-agent smart-agent)
 
 # ----------- nlohmann json library
 # TODO downloads too long?
@@ -35,15 +35,6 @@ if(NOT json_POPULATED)
     ADD_SUBDIRECTORY(${json_SOURCE_DIR} ${json_BINARY_DIR} EXCLUDE_FROM_ALL)
 endif()
 
-
-# ----------- reproc library
-SET(REPROC++ ON)
-FetchContent_Declare(
-        reproc++
-        GIT_REPOSITORY https://github.com/DaanDeMeyer/reproc.git
-        GIT_TAG        v14.2.4
-)
-FetchContent_MakeAvailable(reproc++)
 
 
 # ------------ linking
