--- a/agents/net-connectivity-agent/CMakeLists.txt
+++ b/agents/net-connectivity-agent/CMakeLists.txt
@@ -1,8 +1,9 @@
-cmake_minimum_required(VERSION 3.20)
-#project(agent-memory-logger)
-if(NOT TARGET CommunicationLib)
-    add_subdirectory(../../communication)
+CMAKE_MINIMUM_REQUIRED(VERSION 3.20)
+SET(CMAKE_CXX_STANDARD 20)
+
+if(NOT TARGET agent_client_lib)
+    ADD_SUBDIRECTORY(../../agent-client communication-lib-build)
 endif()
-add_executable(net-connectivity-agent net-connectivity-agent.cpp)
-configure_file(config.json config.json COPYONLY)
-target_link_libraries(net-connectivity-agent CommunicationLib)
+ADD_EXECUTABLE(net-connectivity-agent net-connectivity-agent.cpp)
+CONFIGURE_FILE(config.json config.json COPYONLY)
+TARGET_LINK_LIBRARIES(net-connectivity-agent agent_client_lib)
