--- a/agents/space-agent/CMakeLists.txt
+++ b/agents/space-agent/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.20)
-#project(agent-memory-logger)
+SET(CMAKE_CXX_STANDARD 20)
 if(NOT TARGET agent_client_lib)
-    add_subdirectory(../../agent-client)
+    add_subdirectory(../../agent-client communication-lib-build)
 endif()
 add_executable(space-agent space-agent.cpp)
 configure_file(config.json config.json COPYONLY)
