replaced some binds with lambda

--- a/agents-list.conf
+++ b/agents-list.conf
@@ -3,6 +3,8 @@
 #agents/ram-agent
 #agents/temperature-agent
 agents/test-random-agent
+agents/test-random-agent
+agents/test-random-agent
 #agents/net-connectivity-agent
 
 #agents/smart-agent # not implemented!
