--- a/agents-list.conf
+++ b/agents-list.conf
@@ -1,10 +1,10 @@
-#agents/space-agent
-#agents/uptime-agent
-#agents/ram-agent
-#agents/temperature-agent
-agents/test-random-agent
-agents/test-random-agent
-agents/test-random-agent
-#agents/net-connectivity-agent
+agents/space-agent
+agents/uptime-agent
+agents/ram-agent
+agents/temperature-agent
+agents/net-connectivity-agent
+#agents/test-random-agent
+
+
 
 #agents/smart-agent # not implemented!
