fixing agent exit - not working yet

--- a/agents-list.conf
+++ b/agents-list.conf
@@ -1,8 +1,9 @@
-agents/space-agent
+#agents/space-agent
+#agents/ram-agent
+
 agents/uptime-agent
-agents/ram-agent
 agents/temperature-agent
-agents/net-connectivity-agent
+#agents/net-connectivity-agent
 #agents/test-random-agent
 
 
