agent wants to exit - fixed app crash

--- a/agents-list.conf
+++ b/agents-list.conf
@@ -2,7 +2,7 @@
 #agents/ram-agent
 
 agents/uptime-agent
-agents/temperature-agent
+#agents/temperature-agent
 #agents/net-connectivity-agent
 #agents/test-random-agent
 
