--- a/agents-list.conf
+++ b/agents-list.conf
@@ -1,9 +1,11 @@
 #agents/space-agent
-#agents/ram-agent
+agents/ram-agent
 
 agents/uptime-agent
 #agents/temperature-agent
 #agents/net-connectivity-agent
+#agents/test-random-agent
+#agents/test-random-agent
 #agents/test-random-agent
 
 
