changed tests dir name

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,7 +38,7 @@ ENDFOREACH ()
 # ------------ linking
 TARGET_LINK_LIBRARIES(modulog reproc++ asio nlohmann_json::nlohmann_json)
 
-#ADD_SUBDIRECTORY(tests)
+#ADD_SUBDIRECTORY(test)
 
 
 INSTALL(TARGETS modulog DESTINATION ".")
