--- a/communication/CMakeLists.txt
+++ b/communication/CMakeLists.txt
@@ -1,12 +1,12 @@
-cmake_minimum_required(VERSION 3.20)
+CMAKE_MINIMUM_REQUIRED(VERSION 3.20)
 SET(CMAKE_CXX_STANDARD 17)
 
-file(GLOB_RECURSE source_files "src/*")
-include(FetchContent)
+FILE(GLOB_RECURSE source_files "src/*")
+INCLUDE(FetchContent)
 
-add_library(CommunicationLib ${source_files})
-target_include_directories(CommunicationLib PUBLIC "include/")
-target_include_directories(CommunicationLib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+ADD_LIBRARY(CommunicationLib ${source_files})
+TARGET_INCLUDE_DIRECTORIES(CommunicationLib PUBLIC "include/")
+TARGET_INCLUDE_DIRECTORIES(CommunicationLib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
 # ----------- nlohmann json library
 # TODO downloads too long?
@@ -19,10 +19,10 @@ FetchContent_Declare(json
         )
 
 FetchContent_GetProperties(json)
-if(NOT json_POPULATED)
+IF(NOT json_POPULATED)
     FetchContent_Populate(json)
     ADD_SUBDIRECTORY(${json_SOURCE_DIR} ${json_BINARY_DIR} EXCLUDE_FROM_ALL)
-endif()
+ENDIF()
 
 # ----------- asio library
 FetchContent_Declare(asio
@@ -32,13 +32,13 @@ FetchContent_Declare(asio
         BUILD_COMMAND ""
         )
 FetchContent_GetProperties(asio)
-if(NOT asio_POPULATED)
+IF(NOT asio_POPULATED)
     FetchContent_Populate(asio)
-endif()
-add_library(asio INTERFACE)
-target_include_directories(asio INTERFACE ${asio_SOURCE_DIR}/asio/include)
-find_package(Threads)
-target_link_libraries(asio INTERFACE Threads::Threads)
+ENDIF()
+ADD_LIBRARY(asio INTERFACE)
+TARGET_INCLUDE_DIRECTORIES(asio INTERFACE ${asio_SOURCE_DIR}/asio/include)
+FIND_PACKAGE(Threads)
+TARGET_LINK_LIBRARIES(asio INTERFACE Threads::Threads)
 
 # ----------- reproc library
 SET(REPROC++ ON)
@@ -51,4 +51,5 @@ FetchContent_MakeAvailable(reproc++)
 
 #-----------
 
-target_link_libraries(CommunicationLib asio reproc++ nlohmann_json::nlohmann_json) # stdc++fs is there because of cross-compiling for Rpi
+ADD_SUBDIRECTORY(../meta-lib meta-lib-build)
+TARGET_LINK_LIBRARIES(CommunicationLib asio reproc++ nlohmann_json::nlohmann_json MetaLib)
