--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,8 +38,8 @@ FOREACH (IDX RANGE ${AGENTS_COUNT})
 ENDFOREACH ()
 # ------------ linking
 
-TARGET_LINK_LIBRARIES(modulog CoreLib)
-
+FIND_PACKAGE(libbringauto_logger)
+TARGET_LINK_LIBRARIES(modulog CoreLib bringauto_logger::bringauto_logger)
 IF(BRINGAUTO_TESTS)
     ENABLE_TESTING()
     ADD_SUBDIRECTORY(test)
