--- a/agents/space-agent/CMakeLists.txt
+++ b/agents/space-agent/CMakeLists.txt
@@ -1,8 +1,5 @@
-cmake_minimum_required(VERSION 3.20)
+CMAKE_MINIMUM_REQUIRED(VERSION 3.20)
 SET(CMAKE_CXX_STANDARD 17)
-if(NOT TARGET agent_client_lib)
-    add_subdirectory(../../agent-client communication-lib-build)
-endif()
-add_executable(space-agent space-agent.cpp)
-configure_file(config.json config.json COPYONLY)
-target_link_libraries(space-agent agent_client_lib)
+ADD_EXECUTABLE(space-agent space-agent.cpp)
+CONFIGURE_FILE(config.json config.json COPYONLY)
+TARGET_LINK_LIBRARIES(space-agent agent_client_lib)
