--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,23 +4,15 @@ PROJECT(Tests)
 SET(CMAKE_CXX_STANDARD 17)
 
 ENABLE_TESTING()
-INCLUDE(FetchContent)
-FetchContent_Declare(
-        googletest
-        URL https://github.com/google/googletest/archive/609281088cfefc76f9d0ce82e1ff6c30cc3591e5.zip
-)
-# For Windows: Prevent overriding the parent project's compiler/linker settings
-SET(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-FetchContent_MakeAvailable(googletest)
+ADD_SUBDIRECTORY(smurf-test/agents/on-off-agent)
+ADD_SUBDIRECTORY(smurf-test/agents/simple-log-agent)
 
-ADD_EXECUTABLE(hello_test hello_test.cpp)
-TARGET_LINK_LIBRARIES(hello_test gtest_main CoreLib)
-ADD_SUBDIRECTORY(agents/exiting-agent)
-ADD_SUBDIRECTORY(agents/simple-log-agent)
-INCLUDE(GoogleTest)
-gtest_discover_tests(hello_test)
+find_package(Python3 COMPONENTS Interpreter Development)
+message("Python_FOUND:${Python3_FOUND}")
+message("Python_VERSION:${Python3_VERSION}")
+message("Python_VERSION:${Python3_EXECUTABLE}")
 
-ADD_TEST(NAME hello_test
-        COMMAND hello_test)
-CONFIGURE_FILE(agents-enabled.conf agents-enabled.conf)
+add_test(NAME sample_test COMMAND ${Python3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/lib/StateSmurf/SmurfTestingScripts/CompareScenarios.py
+        -s ${CMAKE_CURRENT_SOURCE_DIR}/smurf-test/scenarios.json  -e ${CMAKE_BINARY_DIR}/modulog -C
+        WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/test/smurf-test)# ${EXECUTABLE_OUTPUT_PATH} )
 
