adding test agents

--- a/agents/net-connectivity-agent/CMakeLists.txt
+++ b/agents/net-connectivity-agent/CMakeLists.txt
@@ -1,5 +1,6 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.20)
 SET(CMAKE_CXX_STANDARD 17)
-ADD_EXECUTABLE(net-connectivity-agent net-connectivity-agent.cpp)
+SET(AG_NAME net-connectivity-agent)
+ADD_EXECUTABLE(${AG_NAME} ${AG_NAME}.cpp)
 CONFIGURE_FILE(config.json config.json COPYONLY)
-TARGET_LINK_LIBRARIES(net-connectivity-agent agent_client_lib)
+TARGET_LINK_LIBRARIES(${AG_NAME} agent_client_lib)
