--- a/test/smurf-test/agents/simple-log-agent/CMakeLists.txt
+++ b/test/smurf-test/agents/simple-log-agent/CMakeLists.txt
@@ -1,7 +1,5 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.20)
 SET(CMAKE_CXX_STANDARD 17)
-if(NOT TARGET agent_client_lib)
-    ADD_SUBDIRECTORY(../../agent-client communication-lib-build)
-endif()
-ADD_EXECUTABLE(simple-log-agent simple-log-agent.cpp)
-TARGET_LINK_LIBRARIES(simple-log-agent agent_client_lib)
+SET(AG_NAME simple-log-agent)
+ADD_EXECUTABLE(${AG_NAME} ${AG_NAME}.cpp)
+TARGET_LINK_LIBRARIES(${AG_NAME} agent_client_lib)
