--- a/test/smurf-test/agents/start-fail-delay-agent/CMakeLists.txt
+++ b/test/smurf-test/agents/start-fail-delay-agent/CMakeLists.txt
@@ -1,5 +1,5 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.20)
 SET(CMAKE_CXX_STANDARD 17)
-SET(AG_NAME on-off-agent)
+SET(AG_NAME start-fail-delay-agent)
 ADD_EXECUTABLE(${AG_NAME} ${AG_NAME}.cpp)
 TARGET_LINK_LIBRARIES(${AG_NAME} agent_client_lib)
