--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,24 @@ CMAKE_MINIMUM_REQUIRED(VERSION 3.20)
 INCLUDE(FetchContent)
 PROJECT(modulog)
 
+# for linking .so after make install (we have ba_logger):
+SET(CMAKE_SKIP_BUILD_RPATH  FALSE)
+SET(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE)
+SET(CMAKE_INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/lib)
+SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
+
 OPTION(BRINGAUTO_TESTS "Tests" OFF)
 OPTION(BRINGAUTO_INSTALL "Install" OFF)
 OPTION(BRINGAUTO_PACKAGE "Create package" OFF)
+IF(BRINGAUTO_PACKAGE)
+    IF(NOT BRINGAUTO_INSTALL)
+        MESSAGE(WARNING "BRINGAUTO_PACKAGE is ON, so BRINGAUTO_INSTALL is also ON")
+        SET(BRINGAUTO_INSTALL ON)
+    ENDIF()
+ENDIF()
 
 SET(CMAKE_CXX_STANDARD 17)
+SET(modulog_VERSION 1.0.0)
 SET(AG_BUILT_LIST ${CMAKE_BINARY_DIR}/agents-enabled.conf)
 
 ADD_SUBDIRECTORY(core)
@@ -31,22 +44,28 @@ FOREACH (IDX RANGE ${AGENTS_COUNT})
         FILE(APPEND ${AG_BUILT_LIST} ${AG_PATH} "\n")
 
         IF(BRINGAUTO_INSTALL)
-            SET(AG_INSTALL_DIR ${CMAKE_INSTALL_PREFIX}/agents/${AG_NAME})
-            INSTALL(TARGETS ${AG_NAME} DESTINATION ${AG_INSTALL_DIR})
-            INSTALL(FILES ${AG_PATH}/config.json DESTINATION ${AG_INSTALL_DIR})
+            INSTALL(TARGETS ${AG_NAME} DESTINATION agents/${AG_NAME})
+            INSTALL(FILES ${AG_PATH}/config.json DESTINATION agents/${AG_NAME})
         ENDIF()
     ENDIF ()
 ENDFOREACH ()
 # ------------ linking
 
-#FIND_PACKAGE(libbringauto_logger)
-TARGET_LINK_LIBRARIES(modulog CoreLib)#bringauto_logger::bringauto_logger)
+TARGET_LINK_LIBRARIES(modulog CoreLib)
 IF(BRINGAUTO_TESTS)
     ENABLE_TESTING()
     ADD_SUBDIRECTORY(test)
 ENDIF()
 
 IF(BRINGAUTO_INSTALL)
-    INSTALL(TARGETS modulog DESTINATION ".")
-    INSTALL(FILES ${AG_BUILT_LIST} DESTINATION ".")
+    INSTALL(TARGETS modulog DESTINATION .)
+    INSTALL(FILES ${AG_BUILT_LIST} DESTINATION .)
+ENDIF()
+
+IF(BRINGAUTO_PACKAGE)
+    SET(CPACK_GENERATOR ZIP)
+    SET(CPACK_PACKAGE_CONTACT "Martin Hofbauer <martin.hofbauer@bringauto.com>")
+    SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Martin Hofbauer <martin.hofbauer@bringauto.com>")
+    SET(CPACK_PACKAGE_VERSION ${libbringauto_logger_VERSION})
+    INCLUDE(CPack)
 ENDIF()
