Repaired some test agents

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,12 @@ SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 OPTION(BRINGAUTO_TESTS "Tests" OFF)
 OPTION(BRINGAUTO_INSTALL "Install" OFF)
 OPTION(BRINGAUTO_PACKAGE "Create package" OFF)
+IF(BRINGAUTO_TESTS)
+    ADD_COMPILE_DEFINITIONS(BRINGAUTO_TESTS=1) # if this macro defined, SmurfState library included in modulog
+    IF(BRINGAUTO_PACKAGE OR BRINGAUTO_INSTALL)
+        MESSAGE(FATAL_ERROR "You cannot install or create package with BRINGAUTO_TESTS enabled")
+    ENDIF()
+ENDIF()
 IF(BRINGAUTO_PACKAGE)
     IF(NOT BRINGAUTO_INSTALL)
         MESSAGE(WARNING "BRINGAUTO_PACKAGE is ON, so BRINGAUTO_INSTALL is also ON")
